# WORKING_SERVER

./: .gitignore  .pylintrc  .replit  1.23.1  2.2.3  4.0.0  404.html  5.2.0  500.html  AI_AGENT_DOCUMENTATION.md  AI_AGENT_UPGRADE_SUMMARY.md  COMPLETE_IIS_SETUP.txt  DEPLOYMENT_INSTRUCTIONS.txt  DOMAIN_SETUP_GUIDE.txt  DOWNLOAD_FIX_SUMMARY.md  EDIT_FEATURE_FIX_SUMMARY.md  FINAL_DEPLOYMENT_GUIDE.txt  FIXES_IMPLEMENTED.md  MCP_INTEGRATION_DOCUMENTATION.md  MEMORY_SYSTEM_DOCUMENTATION.md  Makefile  README.md  TECHNICAL_DOCUMENTATION.md  WARP.md  __tmp_check_api_keys.py  _tmp_apply_schema.py  _tmp_check_cols.py  app.py  app_config.py  auth.py  auth_utils.py  clear_memory.py  config.py  cookies.txt  create_test_report.py  csrf_error.html  cully_scheduler.py  debug_start.bat  deploy.py  fix_database.py  (+68 more)
api/: __init__.py  admin.py  auth.py  config.py  database.py  database_performance.py  documentation.py  errors.py  files.py  keys.py  reports.py  schemas.py  security.py  tasks.py  users.py  versioning.py
config/: __init__.py  app.yaml  cdn.yaml  development.yaml  manager.py  secrets.py  testing.yaml
data/: submissions.archived.json
database/: __init__.py  backup.py  cli.py  config.py  fix_missing_columns.py  migrations.py  optimization_cli.py  performance.py  pooling.py  query_analyzer.py  query_cache.py
docs/: background_task_processing.md  code_review_guidelines.md  database_performance_optimization.md  faq-troubleshooting.md  performance_optimization.md  ui_consistency_audit.md
monitoring/: logging_config.py  metrics.py  tracing.py
routes/: ai.py  analytics.py  api.py  approval.py  audit.py  auth.py  bot.py  bulk.py  collaboration.py  compare.py  dashboard.py  dashboard_optimized.py  edit.py  intelligent_search.py  io_builder.py  main.py  mcp.py  notifications.py  reports.py  search.py  status.py  templates.py  test_download.py  webhooks.py
scripts/: code_quality.py  debt_dashboard.py  quality_automation.py  quality_metrics.py  run_migrations.py  technical_debt_tracker.py
security/: audit.py  authentication.py  headers.py  validation.py
services/: __init__.py  ai_agent.py  ai_assistant.py  ai_service.py  bot_assistant.py  cully_data_sync.py  dashboard_stats.py  direct_docx_generator.py  document_generator.py  email_generator.py  equipment_assets.py  fds_generator.py  file_download.py  form_autofill.py  html_generator.py  intelligent_lookup.py  mcp_integration.py  memory_manager.py  module_lookup.py  report_builder.py  report_generator.py  report_renderer.py  report_types.py  sat_tables.py  storage_manager.py  system_architecture.py  user_email_service.py  web_module_scraper.py
tasks/: __init__.py  celery_app.py  cli.py  email_tasks.py  failure_handler.py  maintenance_tasks.py  monitoring.py  monitoring_tasks.py  report_tasks.py  result_cache.py
templates/: 404.html  FDS.html  FDS_Template.docx  SAT.html  SAT_Template.docx  Site_Survey.html  admin_base.html  admin_dashboard.html  admin_reports.html  approve.html  automation_manager_dashboard.html  automation_manager_reviews.html  automation_manager_reviews.old.html  base.html  base_dashboard.html  change_password.html  csrf_error.html  designSystem.html  engineer_dashboard.html  forgot_password.html  io_builder.html  login.html  my_reports.html  notification_center.html  pending_approval.html  pm_dashboard.html  profile_settings.html  register.html  register_confirmation.html  report_selector.html  reset_password.html  reset_password_otp.html  sat_wizard.html  status.html  submissions_list.html  system_settings.html  welcome.html  (+4 more)
(+70 files in other folders)
